YAML-Standard/fastapi-service.yaml
# yaml-standard/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
  namespace: standard
spec:
  type: NodePort  # Use LoadBalancer to expose to the internet
  selector:
    app: fastapi
  ports:
    - protocol: TCP
      port: 80   # External port
      targetPort: 5000 
      nodePort: 32000
